[package]
name = "supreme-octo-potato"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-test = "15.3.0"
hyper = "1.4.1"
serde = { version = "1.0.205", features = ["serde_derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
